<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.3</version>
        <relativePath/> </parent>
    <groupId>com.MaViniciusDev</groupId>
    <artifactId>Vesta</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Vesta</name>
    <description>Vesta</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>21</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-community-dialects</artifactId>
        </dependency>
        <dependency>
            <groupId>net.coobird</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>0.4.21</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-sheets</artifactId>
            <version>v4-rev612-1.25.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <version>1.15.0</version>
                <configuration>
                    <workingDirectory>frontend</workingDirectory>
                    <nodeVersion>v20.19.0</nodeVersion>
                    <npmVersion>10.2.4</npmVersion>
                </configuration>
                <executions>
                    <execution>
                        <id>install node and npm</id>
                        <goals><goal>install-node-and-npm</goal></goals>
                        <phase>generate-resources</phase>
                    </execution>
                    <execution>
                        <id>npm install</id>
                        <goals><goal>npm</goal></goals>
                        <phase>generate-resources</phase>
                        <configuration><arguments>install</arguments></configuration>
                    </execution>
                    <execution>
                        <id>npm run build</id>
                        <goals><goal>npm</goal></goals>
                        <phase>generate-resources</phase>
                        <configuration><arguments>run build</arguments></configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-react-build</id>
                        <phase>process-resources</phase>
                        <goals><goal>copy-resources</goal></goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/classes/static</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>frontend/dist</directory>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.4.1</version>
                <executions>
                    <execution>
                        <id>l4j-clui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>${project.build.directory}/Vesta.exe</outfile>
                            <jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
                            <errTitle>Erro no Vesta</errTitle>
                            <classPath>
                                <mainClass>com.maviniciusdev.vesta.VestaApplication</mainClass>
                                <addDependencies>false</addDependencies>
                                <preCp>anything</preCp>
                            </classPath>
                            <jre>
                                <path>jre</path>
                                <minVersion>21.0.0</minVersion>
                                <opts>
                                    <opt>-Xms128m</opt>
                                    <opt>-Xmx512m</opt>
                                    <opt>-Djava.awt.headless=false</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>1.0.0.0</fileVersion>
                                <txtFileVersion>1.0.0.0</txtFileVersion>
                                <fileDescription>Sistema de Gestao Vesta</fileDescription>
                                <copyright>MaViniciusDev</copyright>
                                <productVersion>1.0.0.0</productVersion>
                                <txtProductVersion>1.0.0.0</txtProductVersion>
                                <productName>Vesta</productName>
                                <internalName>vesta</internalName>
                                <originalFilename>Vesta.exe</originalFilename>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>windows-app</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>prepare-jpackage-staging</id>
                                <phase>pre-integration-test</phase>
                                <goals><goal>run</goal></goals>
                                <configuration>
                                    <target>
                                        <mkdir dir="${project.build.directory}/jpackage-input"/>
                                        <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                              todir="${project.build.directory}/jpackage-input"/>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>1.7.4</version>
                        <executions>
                            <execution>
                                <id>build-app-image</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>jpackage</goal>
                                </goals>
                                <configuration>
                                    <name>Vesta</name>
                                    <appVersion>1.0.0</appVersion>
                                    <vendor>MaViniciusDev</vendor>
                                    <destination>${project.build.directory}/app</destination>
                                    <input>${project.build.directory}/jpackage-input</input>
                                    <mainJar>${project.build.finalName}.jar</mainJar>
                                    <type>APP_IMAGE</type>
                                    <javaOptions>
                                        <javaOption>--enable-native-access=ALL-UNNAMED</javaOption>
                                    </javaOptions>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>windows-exe</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>prepare-jpackage-staging-exe</id>
                                <phase>pre-integration-test</phase>
                                <goals><goal>run</goal></goals>
                                <configuration>
                                    <target>
                                        <mkdir dir="${project.build.directory}/jpackage-input"/>
                                        <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                              todir="${project.build.directory}/jpackage-input"/>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>1.7.4</version>
                        <executions>
                            <execution>
                                <id>build-exe</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jpackage</goal>
                                </goals>
                                <configuration>
                                    <name>Vesta</name>
                                    <appVersion>${project.version}</appVersion>
                                    <vendor>MaViniciusDev</vendor>
                                    <destination>${project.build.directory}/installer</destination>
                                    <input>${project.build.directory}/jpackage-input</input>
                                    <mainJar>${project.build.finalName}.jar</mainJar>
                                    <type>EXE</type>
                                    <winConsole>true</winConsole>
                                    <javaOptions>
                                        <javaOption>--enable-native-access=ALL-UNNAMED</javaOption>
                                    </javaOptions>
                                </configuration>
                            </execution>
                            <execution>
                                <id>build-msi</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jpackage</goal>
                                </goals>
                                <configuration>
                                    <name>Vesta</name>
                                    <appVersion>${project.version}</appVersion>
                                    <vendor>MaViniciusDev</vendor>
                                    <destination>${project.build.directory}/installer</destination>
                                    <input>${project.build.directory}/jpackage-input</input>
                                    <mainJar>${project.build.finalName}.jar</mainJar>
                                    <type>MSI</type>
                                    <winConsole>true</winConsole>
                                    <javaOptions>
                                        <javaOption>--enable-native-access=ALL-UNNAMED</javaOption>
                                    </javaOptions>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>